Профиль пользователя: разметка стр. с вопросами, ответами, уведомлениями, автомобилями.

--- a/app/profile-answers.html
+++ b/app/profile-answers.html
@@ -683,44 +683,71 @@
                             </li>
                         </ul>
 
-                        <h2>Вопросы пользователя Ivan</h2>
+                        <h2>Ответы пользователя Ivan</h2>
 
-                        <div class="text page-text">
-                            <p>
-                                В жизни каждого <em>автолюбителя</em> <i>наступает</i> такой момент,
-                                когда приходится все делать самому. Засучивать рукава,
-                                брать <strong>инструмент</strong> в <b>руки</b> и самостоятельно обслуживать,
-                                диагностировать неисправность, <strong><em>ремонтировать</em></strong> или тюнинговать
-                                свой автомобиль.
-                            </p>
-                            <p>
-                                Причин, по которым человек пытается все
-                                сделать своими руками, - множество. Это, например: желание
-                                человека узнать и понять устройство своего автомобиля и научиться
-                                чему-то новому. А для кого-то «поковыряться» в машине – это проявление
-                                нежных и глубоких чувств к своему верному, железному другу.
-                                Для других ремонт своими руками – это просто способ сэкономить деньги.
-                                Но, какими бы мотивами не руководствовался человек, для успешного
-                                решения поставленных задач ему будет необходима информация.
-                                То есть: желание или необходимость отремонтировать личное транспортное
-                                средство своими силами - есть, а необходимых знаний для этого, - нет.
-                                И, естественно, возникают вопросы примерно такого характера:
-                                Как всё правильно сделать?
-                                Какая последовательность выполнения работы?
-                                Как не допустить досадных ошибок?
-                                Какой инструмент будет необходим?
-                                И как выбрать качественные запчасти?
-                            </p>
-                            <p>
-                                Вот для ответов на подобные вопросы и был создан сайт
-                                <strong>"Школа авторемонта"</strong>.
-                                Здесь для автолюбителей собраны и, конечно же, будут постоянно
-                                добавляться статьи, советы и рекомендации по техническому
-                                обслуживанию и ремонту легковых автомобилей различных марок и
-                                моделей. И мы надеемся, что информация, прочитанная Вами,
-                                будет полезной и поможет самостоятельно, быстро, а главное,
-                                правильно, отремонтировать и обслужить&nbsp; автомобиль.
-                            </p>
+                        <div class="blog with-filters">
+                            <div class="filters">
+                                <div class="on-page">
+                                    Всего ответов: <span class="count">1</span>
+                                </div>
+                            </div>
+                            <div class="list">
+                                <div class="item answer">
+                                    <div class="row">
+                                        <div class="date pull-left">
+                                            <span class="title">Ответ оставлен</span>
+                                            <span class="value">25 окт. 2016 09:22</span>
+                                        </div>
+                                        <div class="buttons pull-right">
+                                            <button class="link delete-item" data-item-id="2223" title="Удалить">
+                                                <i class="material-icons">delete</i>
+                                            </button>
+                                            <a href="#" title="Редактировать">
+                                                <i class="material-icons">edit</i>
+                                            </a>
+                                        </div>
+                                        <h3 class="item-title">
+                                            <a href="http://avtorem.info/vopros-otvet/daewoo-lanos-nexia-sens-matiz-nubira/skrip-v-perednej-podveske-zaz-sens.html#comment-2223">
+                                                Скрип в передней подвеске ЗАЗ СЕНС
+                                            </a>
+                                        </h3>
+                                        <div class="text item-text">
+                                            <p>Забыл отписаться сразу, сори.</p>
+                                            <p>В общем, - подвеска оказалась в порядке. Источником посторонних звуков была развалившаяся в двух местах выхлопная. Из-за оторвавшейся от передней части гофры и вывалившейся из глушителя входной трубы - средняя часть выхлопной свободно болталась на повесах, терлась на стыках, задевала по кузову. Отсюда и специфические звуки.</p>
+                                            <p>Это можно было понять по рычанию двигателя под газом, но я думал, что это просто свищ.&nbsp;Реальные масштабы проблемы с выхлопной удивили, пришлось поменять почти полностью.</p>
+                                        </div>
+                                        <div class="vote" title="Оценка">
+                                            Оценка
+                                        </div>
+                                        <div class="col-md-12 col-xs-12">
+                                            <div class="answers">
+                                                Комментарии к ответу:
+                                                <a href="#">
+                                                    0
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--<div class="pagination">-->
+                                <!--<ul>-->
+                                    <!--<li class="active"><a href="#">1</a></li>-->
+                                    <!--<li><a href="#">2</a></li>-->
+                                    <!--<li class="next" title="Следующая">-->
+                                        <!--<a href="#">-->
+                                            <!--<span>следующая</span>-->
+                                            <!--<i class="fa fa-angle-right"></i>-->
+                                        <!--</a>-->
+                                    <!--</li>-->
+                                    <!--<li class="last">-->
+                                        <!--<a href="#" title="Последняя">-->
+                                            <!--<span>последняя</span>-->
+                                            <!--<i class="fa fa-angle-double-right"></i>-->
+                                        <!--</a>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
                         </div>
                     </section>
                 </div>
