--- a/app/profile-notifications.html
+++ b/app/profile-notifications.html
@@ -685,42 +685,80 @@
 
                         <h2>Уведомления пользователя Ivan</h2>
 
-                        <div class="text page-text">
-                            <p>
-                                В жизни каждого <em>автолюбителя</em> <i>наступает</i> такой момент,
-                                когда приходится все делать самому. Засучивать рукава,
-                                брать <strong>инструмент</strong> в <b>руки</b> и самостоятельно обслуживать,
-                                диагностировать неисправность, <strong><em>ремонтировать</em></strong> или тюнинговать
-                                свой автомобиль.
-                            </p>
-                            <p>
-                                Причин, по которым человек пытается все
-                                сделать своими руками, - множество. Это, например: желание
-                                человека узнать и понять устройство своего автомобиля и научиться
-                                чему-то новому. А для кого-то «поковыряться» в машине – это проявление
-                                нежных и глубоких чувств к своему верному, железному другу.
-                                Для других ремонт своими руками – это просто способ сэкономить деньги.
-                                Но, какими бы мотивами не руководствовался человек, для успешного
-                                решения поставленных задач ему будет необходима информация.
-                                То есть: желание или необходимость отремонтировать личное транспортное
-                                средство своими силами - есть, а необходимых знаний для этого, - нет.
-                                И, естественно, возникают вопросы примерно такого характера:
-                                Как всё правильно сделать?
-                                Какая последовательность выполнения работы?
-                                Как не допустить досадных ошибок?
-                                Какой инструмент будет необходим?
-                                И как выбрать качественные запчасти?
-                            </p>
-                            <p>
-                                Вот для ответов на подобные вопросы и был создан сайт
-                                <strong>"Школа авторемонта"</strong>.
-                                Здесь для автолюбителей собраны и, конечно же, будут постоянно
-                                добавляться статьи, советы и рекомендации по техническому
-                                обслуживанию и ремонту легковых автомобилей различных марок и
-                                моделей. И мы надеемся, что информация, прочитанная Вами,
-                                будет полезной и поможет самостоятельно, быстро, а главное,
-                                правильно, отремонтировать и обслужить&nbsp; автомобиль.
-                            </p>
+                        <div class="blog with-filters">
+                            <div class="filters">
+                                <div class="on-page">
+                                    Всего уведомлений: <span class="count">11</span>
+                                </div>
+                            </div>
+                            <div class="list">
+                                <div class="item notification">
+                                    <a href="#">
+                                        <i class="fa fa-thumbs-up info"></i>
+                                        <span class="small-text date">25 мин. назад</span>
+                                        <span class="text">
+                                            Пользователю Support понравилась ваша статья.
+                                        </span>
+                                    </a>
+                                    <a href="#" class="delete-button">
+                                        <i class="fa fa-close"></i>
+                                    </a>
+                                </div>
+                                <div class="item notification">
+                                    <a href="#">
+                                        <i class="fa fa-comment success"></i>
+                                        <span class="small-text date">1 ч. назад</span>
+                                        <span class="text">
+                                            Роман (roman@email.com) оставил комментарий к вашей статье.
+                                        </span>
+                                    </a>
+                                    <a href="#" class="delete-button">
+                                        <i class="fa fa-close"></i>
+                                    </a>
+                                </div>
+                                <div class="item notification">
+                                    <a href="#">
+                                        <i class="fa fa-user-plus success"></i>
+                                        <span class="small-text date">16 ч. назад</span>
+                                        <span class="text">
+                                            Зарегистрировался новый пользователь Denwebart.
+                                        </span>
+                                    </a>
+                                    <a href="#" class="delete-button">
+                                        <i class="fa fa-close"></i>
+                                    </a>
+                                </div>
+                                <div class="item notification">
+                                    <a href="#">
+                                        <i class="fa fa-trash danger"></i>
+                                        <span class="small-text date">2 д. назад</span>
+                                        <span class="text">
+                                            Ваш вопрос был удален.
+                                        </span>
+                                    </a>
+                                    <a href="#" class="delete-button">
+                                        <i class="fa fa-close"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="pagination">
+                                <ul>
+                                    <li class="active"><a href="#">1</a></li>
+                                    <li><a href="#">2</a></li>
+                                    <li class="next" title="Следующая">
+                                        <a href="#">
+                                            <span>следующая</span>
+                                            <i class="fa fa-angle-right"></i>
+                                        </a>
+                                    </li>
+                                    <li class="last">
+                                        <a href="#" title="Последняя">
+                                            <span>последняя</span>
+                                            <i class="fa fa-angle-double-right"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </section>
                 </div>
