--- a/app/profile-cars.html
+++ b/app/profile-cars.html
@@ -552,7 +552,7 @@
                     <div class="user-sidebar">
                         <div class="user-info">
                             <div class="user-avatar">
-                                <img src="img/uploads/avatar-2.jpg" alt="" class="avatar">
+                                <a href="profile.html"><img src="img/uploads/avatar-2.jpg" alt="" class="avatar"></a>
                             </div>
                             <div class="login">Ivan</div>
                             <div class="fullname">Иван Плахотин</div>
