Карта сайта (sitemap.html).

--- a/app/profile-edit.html
+++ b/app/profile-edit.html
@@ -101,7 +101,7 @@
             </ul>
             <ul class="menu contact-menu m-t-20">
                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
             </ul>
         </nav>
 
@@ -427,7 +427,7 @@
                                 <nav>
                                     <ul class="menu contact-menu horisontal">
                                         <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                                        <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                                        <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
                                     </ul>
                                 </nav>
                                 <div class="clearfix"></div>
@@ -1176,7 +1176,7 @@
                         <nav>
                             <ul class="menu contact-menu">
                                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                                <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                                <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
                             </ul>
                         </nav>
                     </div>
