--- a/app/questions.html
+++ b/app/questions.html
@@ -101,7 +101,7 @@
             </ul>
             <ul class="menu contact-menu m-t-20">
                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
             </ul>
         </nav>
 
@@ -427,7 +427,7 @@
                                 <nav>
                                     <ul class="menu contact-menu horisontal">
                                         <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                                        <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                                        <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
                                     </ul>
                                 </nav>
                                 <div class="clearfix"></div>
@@ -578,10 +578,27 @@
                             </p>
                         </div>
 
-                        <div class="blog">
+                        <div class="blog with-filters">
                             <div class="filters">
-                                <div class="m-b-20">
-                                    <b style="color: red">Тут должны быть фильтры и сортировки</b>
+                                <div class="on-page">
+                                    Всего вопросов: <span class="count">34</span>
+                                </div>
+                                <div class="sort">
+                                    <span>Сортировать по:</span>
+                                    <div class="sortby dropdown">
+                                        <a href="#" class="dropdown-arrow">дате</a>
+                                        <div class="dropdown-container">
+                                            <div class="container-body">
+                                                <ul class="select-list">
+                                                    <li data-value="published_at selected">дате</li>
+                                                    <li data-value="popular">рейтингу (оценке)</li>
+                                                    <li data-value="price">просмотрам</li>
+                                                    <li data-value="rating">комментариям</li>
+                                                    <li data-value="popular">количеству сохранивших</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="list">
@@ -1279,7 +1296,7 @@
                         <nav>
                             <ul class="menu contact-menu">
                                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-                                <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+                                <li><a href="sitemap.html"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
                             </ul>
                         </nav>
                     </div>
