--- a/app/contacts.html
+++ b/app/contacts.html
@@ -560,41 +560,39 @@
                         <h2 class="responsive-block p-r-25">Контакты с администрацией сайта</h2>
 
                         <div class="text page-text">
-                            <div itemprop="articleBody">
-                                <p>
-                                    Есть вопросы, советы и предложения по работе сайта?
-                                    Есть предложения коммерческого характера и взаимовыгодного
-                                    сотрудничества? Хотите связаться с администрацией интернет-проекта
-                                    «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
-                                    «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
-                                    и создан для более быстрой и удобной связи с администрацией сайта.
-                                    Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
-                                    своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
-                                    Так как для нас очень важно знать Ваши впечатления от посещения нашего
-                                    сайта, не менее важно услышать Ваши советы, критику, предложения и
-                                    пожелания по улучшению работы и дальнейшему его развитию.
-                                </p>
-                                <p>
-                                    Мы услышим всех и постараемся, ответим всем, кто в этом нуждается!
-                                </p>
-                                <p>
-                                    В последнее время, нам поступают одинаковые или похожие друг на
-                                    друга вопросы, на которые приходится отвечать по определенному шаблону.
-                                    Вроде и нет ничего сложного в этом деле, но время приходится тратить.
-                                    Поэтому, для экономии нашего и Вашего времени, был добавлен
-                                    раздел «ЧаВо» - часто задаваемые вопросы. Перед тем, как задать вопрос,
-                                    посетите, пожалуйста, раздел
-                                    «<a href="http://www.avtorem.info/otvety-na-chasto-zadavaemye-voprosy.html" rel="nofollow" target="_blank">ЧаВо</a>».
-                                </p>
-                                <p>
-                                    Вопросы, которые касаются поломок, диагностики неисправностей, ремонта
-                                    автомобилей в этом разделе просьба не задавать. Они будут проигнорированы.
-                                    Так как для подобных вопросов на сайте есть специальный раздел
-                                    «<strong><a title="Раздел сайта Вопрос-Ответ" href="http://www.avtorem.info/vopros-otvet" rel="nofollow" target="_blank">Вопрос-Ответ</a></strong>».
-                                    Где Вы без проблем сможете детально описать проблему с Вашим автомобилем и
-                                    получить советы, рекомендации по её решению от пользователей нашего&nbsp; сайта.
-                                </p>
-                            </div>
+                            <p>
+                                Есть вопросы, советы и предложения по работе сайта?
+                                Есть предложения коммерческого характера и взаимовыгодного
+                                сотрудничества? Хотите связаться с администрацией интернет-проекта
+                                «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
+                                «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
+                                и создан для более быстрой и удобной связи с администрацией сайта.
+                                Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
+                                своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
+                                Так как для нас очень важно знать Ваши впечатления от посещения нашего
+                                сайта, не менее важно услышать Ваши советы, критику, предложения и
+                                пожелания по улучшению работы и дальнейшему его развитию.
+                            </p>
+                            <p>
+                                Мы услышим всех и постараемся, ответим всем, кто в этом нуждается!
+                            </p>
+                            <p>
+                                В последнее время, нам поступают одинаковые или похожие друг на
+                                друга вопросы, на которые приходится отвечать по определенному шаблону.
+                                Вроде и нет ничего сложного в этом деле, но время приходится тратить.
+                                Поэтому, для экономии нашего и Вашего времени, был добавлен
+                                раздел «ЧаВо» - часто задаваемые вопросы. Перед тем, как задать вопрос,
+                                посетите, пожалуйста, раздел
+                                «<a href="http://www.avtorem.info/otvety-na-chasto-zadavaemye-voprosy.html" rel="nofollow" target="_blank">ЧаВо</a>».
+                            </p>
+                            <p>
+                                Вопросы, которые касаются поломок, диагностики неисправностей, ремонта
+                                автомобилей в этом разделе просьба не задавать. Они будут проигнорированы.
+                                Так как для подобных вопросов на сайте есть специальный раздел
+                                «<strong><a title="Раздел сайта Вопрос-Ответ" href="http://www.avtorem.info/vopros-otvet" rel="nofollow" target="_blank">Вопрос-Ответ</a></strong>».
+                                Где Вы без проблем сможете детально описать проблему с Вашим автомобилем и
+                                получить советы, рекомендации по её решению от пользователей нашего&nbsp; сайта.
+                            </p>
                         </div>
 
                         <div class="row">
@@ -656,6 +654,24 @@
                                     </a>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="delimiter indent m-t-30"></div>
+
+                        <div class="text page-text">
+                            <p>
+                                Есть вопросы, советы и предложения по работе сайта?
+                                Есть предложения коммерческого характера и взаимовыгодного
+                                сотрудничества? Хотите связаться с администрацией интернет-проекта
+                                «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
+                                «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
+                                и создан для более быстрой и удобной связи с администрацией сайта.
+                                Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
+                                своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
+                                Так как для нас очень важно знать Ваши впечатления от посещения нашего
+                                сайта, не менее важно услышать Ваши советы, критику, предложения и
+                                пожелания по улучшению работы и дальнейшему его развитию.
+                            </p>
                         </div>
                     </section>
                 </div>
