--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -560,21 +560,19 @@
                         <h2 class="responsive-block p-r-25">Карта сайта</h2>
 
                         <div class="text page-text">
-                            <div itemprop="articleBody">
-                                <p>
-                                    Есть вопросы, советы и предложения по работе сайта?
-                                    Есть предложения коммерческого характера и взаимовыгодного
-                                    сотрудничества? Хотите связаться с администрацией интернет-проекта
-                                    «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
-                                    «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
-                                    и создан для более быстрой и удобной связи с администрацией сайта.
-                                    Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
-                                    своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
-                                    Так как для нас очень важно знать Ваши впечатления от посещения нашего
-                                    сайта, не менее важно услышать Ваши советы, критику, предложения и
-                                    пожелания по улучшению работы и дальнейшему его развитию.
-                                </p>
-                            </div>
+                            <p>
+                                Есть вопросы, советы и предложения по работе сайта?
+                                Есть предложения коммерческого характера и взаимовыгодного
+                                сотрудничества? Хотите связаться с администрацией интернет-проекта
+                                «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
+                                «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
+                                и создан для более быстрой и удобной связи с администрацией сайта.
+                                Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
+                                своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
+                                Так как для нас очень важно знать Ваши впечатления от посещения нашего
+                                сайта, не менее важно услышать Ваши советы, критику, предложения и
+                                пожелания по улучшению работы и дальнейшему его развитию.
+                            </p>
                         </div>
 
                         <div class="row">
@@ -2249,6 +2247,24 @@
                                     </li>
                                 </ul>
                             </div>
+                        </div>
+
+                        <div class="delimiter indent m-t-30"></div>
+
+                        <div class="text page-text">
+                            <p>
+                                Есть вопросы, советы и предложения по работе сайта?
+                                Есть предложения коммерческого характера и взаимовыгодного
+                                сотрудничества? Хотите связаться с администрацией интернет-проекта
+                                «<strong>Школа авторемонта</strong>»? Если да, то Вы находитесь
+                                «правильной» странице. Раздел «<strong>Контакты</strong>» как раз
+                                и создан для более быстрой и удобной связи с администрацией сайта.
+                                Заполните ниже форму «<strong>Обратной связи</strong>» и отправьте
+                                своё сообщение. И могу Вас уверить, письмо будет получено и прочитано!
+                                Так как для нас очень важно знать Ваши впечатления от посещения нашего
+                                сайта, не менее важно услышать Ваши советы, критику, предложения и
+                                пожелания по улучшению работы и дальнейшему его развитию.
+                            </p>
                         </div>
                     </section>
                 </div>
