--- a/app/category.html
+++ b/app/category.html
@@ -577,59 +577,58 @@
                                 чему-то новому.
                             </p>
 
-
-                            <!--<div class="row">-->
-                                <!--<div class="menu submenu">-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика-->
-                                            <!--</span>-->
-                                            <!--<small class="count">29</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора-->
-                                            <!--</span>-->
-                                            <!--<small class="count">18</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--Daewoo Lanos, Nexia, Matiz, Sens-->
-                                            <!--</span>-->
-                                            <!--<small class="count">55</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--Mitsubishi (Мицубиси)-->
-                                            <!--</span>-->
-                                            <!--<small class="count">2</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--Таврия, Славута, ЗАЗ-1102-->
-                                            <!--</span>-->
-                                            <!--<small class="count">10</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-4">-->
-                                        <!--<a href="#" class="item">-->
-                                            <!--<span class="title">-->
-                                                <!--Chery (Чери)-->
-                                            <!--</span>-->
-                                            <!--<small class="count">7</small>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
+                            <div class="row">
+                                <div class="menu submenu">
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика
+                                            </span>
+                                            <small class="count">29</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора
+                                            </span>
+                                            <small class="count">18</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Daewoo Lanos, Nexia, Matiz, Sens
+                                            </span>
+                                            <small class="count">55</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Mitsubishi (Мицубиси)
+                                            </span>
+                                            <small class="count">2</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Таврия, Славута, ЗАЗ-1102
+                                            </span>
+                                            <small class="count">10</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Chery (Чери)
+                                            </span>
+                                            <small class="count">7</small>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="blog with-filters">
@@ -928,7 +927,7 @@
                             </div>
                         </div>
 
-                        <div class="delimiter delimiter-2x m-b-30"></div>
+                        <div class="delimiter indent"></div>
 
                         <div class="text page-text">
                             <h3>Подзаголовок h3, вставленный через текстовый редактор</h3>
