--- a/app/index.html
+++ b/app/index.html
@@ -861,7 +861,7 @@
                             </div>
                         </div>
 
-                        <div class="delimiter delimiter-2x m-b-30"></div>
+                        <div class="delimiter indent"></div>
 
                         <div class="table-block page-title">
                             <h2 class="responsive-block p-r-25">Обращение к посетителям сайта</h2>
