--- a/app/category.html
+++ b/app/category.html
@@ -716,7 +716,7 @@
                                             </div>
                                             <div class="comments-count" title="Количество комментариев">
                                                 <a href="page.html#comments">
-                                                    <i class="fa fa-comments-o"></i>
+                                                    <i class="fa fa-comment-o"></i>
                                                     <span class="count" itemprop="commentCount">12 222</span>
                                                 </a>
                                             </div>
