--- a/app/index.html
+++ b/app/index.html
@@ -650,7 +650,7 @@
                                             </div>
                                             <div class="comments-count" title="Количество комментариев">
                                                 <a href="page.html#comments">
-                                                    <i class="fa fa-comments-o"></i>
+                                                    <i class="fa fa-comment"></i>
                                                     <span class="count" itemprop="commentCount">12 222</span>
                                                 </a>
                                             </div>
@@ -672,6 +672,24 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="tags">
+                                        <a href="#">
+                                            <span>Daewoo Lanos</span>
+                                            <span class="count">234</span>
+                                        </a>
+                                        <a href="#">
+                                            <span>Замена колеса</span>
+                                            <span class="count">34</span>
+                                        </a>
+                                        <a href="#">
+                                            <span>Колесные диски</span>
+                                            <span class="count">4</span>
+                                        </a>
+                                        <a href="#">
+                                            <span>Ремонт</span>
+                                            <span class="count">67</span>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="item article">
@@ -734,11 +752,11 @@
                                             </div>
                                             <div class="comments-count" title="Количество комментариев">
                                                 <a href="page.html#comments">
-                                                    <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
+                                                    <i class="fa fa-comment"></i><span class="count" itemprop="commentCount">12</span>
                                                 </a>
                                             </div>
                                             <div class="saved-count" title="Сколько пользователей сохранили">
-                                                <i class="fa fa-heart-o"></i>
+                                                <i class="fa fa-heart"></i>
                                                 <span>1</span>
                                             </div>
 
@@ -814,12 +832,12 @@
                                             </div>
                                             <div class="comments-count" title="Количество комментариев">
                                                 <a href="page.html#comments">
-                                                    <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
+                                                    <i class="fa fa-comment-o"></i><span class="count" itemprop="commentCount">0</span>
                                                 </a>
                                             </div>
                                             <div class="saved-count" title="Сколько пользователей сохранили">
                                                 <i class="fa fa-heart-o"></i>
-                                                <span>1</span>
+                                                <span>0</span>
                                             </div>
 
                                             <div class="like-dislike-widget pull-right">
