--- a/app/questions.html
+++ b/app/questions.html
@@ -662,7 +662,7 @@
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <!--<img src="/img/uploads/default-avatar.png" alt="" class="avatar micro">-->
                                                     <span class="login" itemprop="name">Парк</span>
                                                 </a>
@@ -758,7 +758,7 @@
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <!--<img src="/img/uploads/default-avatar.png" alt="" class="avatar micro">-->
                                                     <span class="login" itemprop="name">Alexander</span>
                                                 </a>
@@ -837,7 +837,7 @@
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <!--<img src="/img/uploads/avatar-1.jpg" alt="" class="avatar micro">-->
                                                     <span class="login" itemprop="name">Muph1984</span>
                                                 </a>
